# Sol2Test

./: CMakeLists.txt  main.cpp  sol.hpp
LuaPrototype/: CMakeLists.txt  main.cpp
UnityPrototype/: Assembly-CSharp.csproj  TestVizReal.sln
UnityPrototype/Assets/LuaScripts/: foo.lua
UnityPrototype/Assets/Scenes/: SampleScene.unity
UnityPrototype/Assets/Scripts/: Test.cs
UnityPrototype/ProjectSettings/: ProjectSettings.asset
